# amxmodx-old-deprecated-dont-use-iwont-work-on-this-anymore-dont-even-ask

./: .gitignore  .gitmodules  CMakeLists.txt  amxxonandroid.config  amxxonandroid.files  amxxonandroid.includes
amxmodx/: Android.mk  CGameConfigs.cpp  CMakeLists.txt  CModule.cpp  CvarManager.cpp  amx.cpp  amxmodx.cpp  amxmodx.h  file.cpp  libraries.cpp  modules.cpp  natives-arm.asm  natives.cpp  natives.h  optimizer.cpp  sclinux.h
android/: AndroidManifest.xml  build  build.xml  local.properties  mount-tmpfs-obj
android/jni/: Application.mk  amxx_config.mk  bs_config.mk  metamod  mm_config.mk
android/jni/libffcall/: Android.mk  CMakeLists.txt
android/jni/libffcall/libffcall-1.13/: Makefile  config.h  config.status  libtool
android/jni/libffcall/libffcall-1.13/avcall/: Makefile  stamp-h2
android/jni/libffcall/libffcall-1.13/callback/: Makefile  callback.h  stamp-h5
android/jni/libffcall/libffcall-1.13/callback/trampoline_r/: Makefile  stamp-h7  trampoline_r.h
android/jni/libffcall/libffcall-1.13/callback/vacall_r/: Makefile  stamp-h6  vacall_r.h
android/jni/libffcall/libffcall-1.13/common/: asm-i386.h
android/jni/libffcall/libffcall-1.13/gnulib-lib/: Makefile
android/jni/libffcall/libffcall-1.13/trampoline/: Makefile  stamp-h4  trampoline.c  trampoline.h
android/jni/libffcall/libffcall-1.13/vacall/: Makefile  stamp-h3  vacall.h
android/res/layout/: activity_launcher.xml
android/res/values/: strings.xml
android/src/su/xash/amxxonandroid/: InstallReceiver.java  LauncherActivity.java
cmake/: GetTargetArch.cmake  ModuleBase.cmake
compiler/amxxpc/: Android.mk  CMakeLists.txt  amx.cpp  amxxpc.cpp  amxxpc.h
compiler/libpc300/: Android.mk  CMakeLists.txt  sc2.c  sclinux.h
modules/: CMakeLists.txt
modules/cstrike/cstrike/: Android.mk  CMakeLists.txt  CstrikeNatives.cpp  CstrikePlayer.cpp  CstrikePlayer.h
modules/cstrike/csx/: Android.mk  CMakeLists.txt
modules/dod/dodfun/: Android.mk  CMakeLists.txt
modules/dod/dodx/: Android.mk  CMakeLists.txt
modules/engine/: Android.mk  CMakeLists.txt  amxxapi.cpp  engine.cpp  moduleconfig.h
modules/fakemeta/: Android.mk  CMakeLists.txt
modules/fun/: Android.mk  CMakeLists.txt
modules/geoip/: Android.mk  CMakeLists.txt
modules/hamsandwich/: Android.mk  CMakeLists.txt  Trampolines.h  hook.h  hook_callbacks.cpp  hook_callbacks.h  hook_native.cpp  hook_specialbot.cpp
modules/ns/: Android.mk  CMakeLists.txt
modules/nvault/: Android.mk  CMakeLists.txt
modules/regex/: Android.mk  CMakeLists.txt
modules/sockets/: Android.mk  CMakeLists.txt
modules/sqlite/: Android.mk  CMakeLists.txt
modules/tfcx/: Android.mk  CMakeLists.txt
modules/ts/tsfun/: Android.mk  CMakeLists.txt
modules/ts/tsx/: Android.mk  CMakeLists.txt
public/: interface_helpers.h
public/memtools/: MemoryUtils.cpp
public/memtools/CDetour/: detourhelpers.h  detours.cpp  detours.h
public/memtools/CDetour/asm/: asm.c  asm.h
