cmake_minimum_required(VERSION 2.6.0)

add_subdirectory( sockets )
add_subdirectory( geoip )
add_subdirectory( hamsandwich )
add_subdirectory( dod/dodx )
add_subdirectory( dod/dodfun )
add_subdirectory( fakemeta )
add_subdirectory( engine )
add_subdirectory( sqlite )
add_subdirectory( ns )
add_subdirectory( tfcx )
add_subdirectory( fun )
add_subdirectory( cstrike/csx )
add_subdirectory( cstrike/cstrike )
add_subdirectory( csdm )
add_subdirectory( nvault )
add_subdirectory( regex )
add_subdirectory( ts/tsx )
add_subdirectory( ts/tsfun )
